<?xml version="1.0" encoding="utf-8"?>
<!--nama : Muhammad Nurkholiq-->
<!--NIM  : 10119902-->
<!--Kelas : IF10K-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_arrow"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_pengisian_data"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:background="@drawable/info_title_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:background="@drawable/info_border"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginStart="-20dp"
                android:layout_marginTop="-8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:lineHeight="14sp"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textFontWeight="700"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck"
                    tools:targetApi="p" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/form_berikut_ini_bertujuan_untuk_memberikan_informasi_kepada_pusat_agar_dapat_mudah_dilaporkan"
                android:textColor="#757575"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/jenis_tes"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/harus_diisi"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/jenistes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rapid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rapid_antigen"/>
            <RadioButton
                android:id="@+id/pcr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcr"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/tanggal_terkonfirmasi"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/harus_diisi"
                android:textColor="#2E7D32"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/tgl_terkonfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pilih_tanggal"
            android:inputType="datetime"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_calendar"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/nik"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_nik"
            android:inputType="number"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/nama"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/harus_diisi"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_nama"
            android:inputType="textCapWords"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/tanggal_lahir"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/harus_diisi"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/tgl_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_tanggal_lahir"
            android:inputType="datetime"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_calendar"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/jenis_kelamin"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/harus_diisi"
                android:layout_marginTop="32dp"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/cowo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki"/>
            <RadioButton
                android:id="@+id/cewe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/hubungan_dengan_orang_tua"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/harus_diisi"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/ortu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orangtua"/>
            <RadioButton
                android:id="@+id/nikah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suami_istri"/>
            <RadioButton
                android:id="@+id/anak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anak"/>
            <RadioButton
                android:id="@+id/lainnya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kerabat_lainnya"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/setuju"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dengan_ini_saya_menyetujui_bahwa_data_yang_saya_isikan_adalah_bena" />

        </LinearLayout>

        <Button
            android:id="@+id/simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/selanjutnya"/>


    </LinearLayout>
</ScrollView>